Add a glossary to travel in Alaska

--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
   </head>
   <body>
     <h1>John B. Russell</h1>
+    <h2><a href="alaska.html">Glossary to travel in Alaska</a></h2>
   </body>
 </html>
