--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>John B. Russell</title>
   </head>
   <body>
     <h1>John B. Russell</h1>
+    <a href="alaska.html">Glossary to travel in Alaska</a>
   </body>
 </html>
