Add missing parentheses; add description of Denali; fix some tense issues.  More work remains to be done on improving readability of this glossary.

--- a/alaska.html
+++ b/alaska.html
@@ -17,10 +17,10 @@
       <li>Be wary of taking a direct flight with stops, as the stops are much less pleasant than the stops on the Ravn Alaska Airlines flights.
 	Customers are discouraged from disembarking from the aircraft.
 	The stops are usually 45-60 minutes, which can be frustratingly long given that relatively few passengers may board or alight.
-	(For my non-airline industry friends, please note that I use airline industry parlance and distinguish a
+	(For my non-airline industry friends, please note that I use airline industry parlance to distinguish a
 	"direct" flight from a "nonstop" flight.
-	A "direct" flight is any combination of takeoffs and landings that operate on the same calendar day under the same flight number;
-	a "nonstop" flight is a single takeoff and landing. 
+	A "direct" flight is a set of sequential takeoffs and landings that operate on the same calendar day under the same flight number;
+	a "nonstop" flight is a single takeoff and landing.)
     </ul>
 
     <h2>Alaskan Hotel, Juneau</h2>
@@ -44,7 +44,7 @@
       <li>The road from Anchorage to Seward goes through a national forest.  There are numerous trailheads along this road. 
     </ul>
 
-    <h2>Arctic Adventure Hostel, Anchorage, AK</h2>
+    <h2>Arctic Adventure Hostel, Anchorage</h2>
     <ul>
       <li>A private room with shared bathroom is a good value.
       <li>The place is clean and well-kept.
@@ -87,7 +87,7 @@
 
     <h2>Car Culture</h2>
     <ul>
-      <li>One of the things that most impressed me about Alaska is how a car is not required to travel throughout the state.
+      <li>One of the things that most impressed me about Alaska is that a car is mostly not required to travel enjoyably throughout the state.
       <li>There are shuttle buses to Denali from Anchorage and Fairbanks, as well as a train (though we did rent a car to visit Denali).
       <li>The Alaska Railroad serves Seward and Whittier from Anchorage (though we did not visit Whittier and rented a car to visit Seward). 
       <li>The northern locales such as Utqiagvik are small and dense enough that everything is walking distance.
@@ -112,8 +112,8 @@
     <h2>Denali</h2>
     <ul>
       <li>We only traveled to Denali State Park; we did not go to the national park.
-	We made this decision because the Internet told us that the mountain views and hiking are both better in the state park.
-	We did not regret the decision, though we don't know what we missed in the national park, either. 
+	We made this decision because the Internet told us that the mountain views and hiking were both better in the state park.
+	We do regret the decision, though we don't know what we missed in the national park, either. 
       <li>The hiking is good.
 	We hiked two out-and-back routes, one from the Ermine Hill Trailhead and one from the Little Coal Creek trailhead.
 	We preferred the route from the Ermine Hill Trailhead, which had prettier scenery. 
@@ -123,13 +123,16 @@
 	We spent two days in Denali State Park, and the only time we were able to see the peak from the ground was on the drive to the park.
       <li>When flying from Anchorage to Fairbanks, we had a great view of the peak of the mountain.
 	It was an overcast day, so such a view would not have been possible from the ground. 
+      <li>The mountain is impressively prominent.  
+        One of the highlights of the trip was seeing the whole thing from the ground, albeit at a great distance and while on the move. 
+        It looks like a cloud from afar. 
     </ul>
 
     <h2>Denali View North Campground</h2>
     <ul>
       <li>The site was not crowded on a dry Sunday night in July.
-	There were three RVs that spend the night and we were the only tent campers.
-      <li>The pathway to the tent sites can be hard to find.
+	We were the only tent campers there; there were also three RVs.
+      <li>The pathway to the tent sites is hard to find.
 	It is behind and to the right of the pay station.
       <li>The tent sites are perfectly fine, but do not seem like they get much use.
 	As we were the only tent campers while we were there, we camped in the first suitable site we found.
